--- a/style.css
+++ b/style.css
@@ -1,41 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 
-* {
+ *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-
-nav {
+    font-family:"poppins", sans-serif ;
+ }
+ nav{
     display: grid;
     grid-template-columns: 10% 1fr 1fr 10%;
     align-items: center;
     color: white;
-    min-height: 10vh;
-}
+    height: 10vh;
+ }
 
-#logo {
+ #logo{
     grid-column: 2/3;
     font-size: 24px;
-}
+ }
 
-
-.menu {
+.menu{
     justify-self: end;
 }
-
-.slider {
+.slider{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(to left, #ba7453, #d1a984);
     z-index: -1;
 }
 
-section {
+section{
     width: 100%;
     height: 80vh;
     display: flex;
@@ -43,37 +40,35 @@ section {
     align-items: center;
 }
 
-.hero {
+.hero{
     height: 60%;
-    width: 100%;
-    position: relative;
+    width:100%;
+    position:relative;
 }
 
-.hero img {
- height: 100%;
- width: 100%;
- object-fit: cover;
-}
-
-
-.hero::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: black;
+.hero img{
     width: 100%;
     height: 100%;
-    opacity: 0.4;
+    object-fit: cover;
 }
 
-.headline {
+.hero::after{
+    content:"";
+    position:absolute;
+    top: 0;
+    left: 0;
+    background: black;
+    width: 100%;
+    height: 100%;
+    opacity:0.4;
+}
+
+.headline{
     position: absolute;
     top: 60%;
     left: 10%;
-    font-size: 100px;
+    font-size:100px;
     color: white;
-    transform: translateY(-10%, -70%);
-    z-index: 3;
+    transform: translateY(-10%,-70%);
+    z-index: 5;
 }
-
